# Currency-Convert

./: Cargo.toml  README.md  appwindow.slint  main.rs
src/: main.rs
ui/: appwindow.slint
