[package]
name = "currency-convert"
version = "0.1.0"
authors = ["Anna Jones <doozle252@gmail.com>"]
edition = "2021"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0"
reqwest = { version = "0.11", features = ["blocking"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [] }

[build-dependencies]
slint-build = "1.0"